Added a subclass of UIButton for the circles. Added more colors, added a UIColor extension for lightening / darkening colors.

--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -1,7 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jvr-Fg-wbN">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Base View Controller-->
+        <scene sceneID="5La-xA-32X">
+            <objects>
+                <viewController id="Dxx-In-oQx" customClass="BaseViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ewx-1b-l5l"/>
+                        <viewControllerLayoutGuide type="bottom" id="gUR-zz-55P"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fva-aP-sHG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zyl-6S-mjZ" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
+                                <rect key="frame" x="16" y="516" width="64" height="64"/>
+                                <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="countour">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.36862745098039218" green="0.76078431372549016" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="UGo-ix-hst"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2TK-qH-0UQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1886" y="408"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="KMF-Y7-AsE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="jvr-Fg-wbN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="N1C-qK-aic"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eKZ-xw-rlA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Dxx-In-oQx" kind="relationship" relationship="rootViewController" id="dEa-eT-PIn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kKf-uk-Brq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1074" y="408"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="countour" width="34" height="29"/>
+    </resources>
 </document>
