--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                                                 <constraint firstAttribute="height" constant="12" id="aYd-iZ-LrK"/>
                                             </constraints>
                                         </view>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rw1-vf-PVd" userLabel="Icon Image View">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rw1-vf-PVd" userLabel="Icon Image View" customClass="RoundedImage" customModule="Josh_Bruce" customModuleProvider="target">
                                             <rect key="frame" x="20" y="20" width="50" height="50"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="A3d-RF-QtY"/>
