--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vlZ-1a-mgr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14E7f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x9L-cP-nEp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -13,12 +13,43 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Dxx-In-oQx" kind="relationship" relationship="rootViewController" id="Yzt-Ll-v6o"/>
+                        <segue destination="nvb-Af-6LF" kind="relationship" relationship="rootViewController" id="mvQ-u5-QRW"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VXO-j1-pDd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1110" y="408"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="VcU-eh-yPZ">
+            <objects>
+                <viewController storyboardIdentifier="Welcome" title="Welcome View Controller" id="nvb-Af-6LF" customClass="WelcomeViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="e5G-qh-6fH"/>
+                        <viewControllerLayoutGuide type="bottom" id="MQc-Ph-s3h"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Oqh-Oq-BMS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wx5-dI-r5K">
+                                <rect key="frame" x="243" y="283" width="114" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.36862745099999999" green="0.76078431369999999" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="Wx5-dI-r5K" secondAttribute="centerY" id="0UR-pR-dvL"/>
+                            <constraint firstAttribute="centerX" secondItem="Wx5-dI-r5K" secondAttribute="centerX" id="ytB-gR-Xzq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="8yi-zN-Xbm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j9s-4U-wWM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1110" y="1138"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="5La-xA-32X">
@@ -77,7 +108,7 @@
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.36862745098039218" green="0.76078431372549016" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.36862745099999999" green="0.76078431369999999" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="UGo-ix-hst"/>
                 </viewController>
@@ -165,7 +196,7 @@
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Hw-UD-9sM" userLabel="Icon View" customClass="RoundedRect" customModule="Josh_Bruce" customModuleProvider="target">
                                             <rect key="frame" x="20" y="20" width="50" height="50"/>
-                                            <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" red="0.95294117649999999" green="0.74901960779999999" blue="0.30980392159999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="11c-ST-qUG"/>
                                                 <constraint firstAttribute="height" constant="50" id="u2D-ZU-sYX"/>
